# bs2026_student_projects

./: README.md  Readme  Video_link  requirements.txt
Anastasija_L-N/: Readme.md  buildReport.py  config.json
Arturas_Sotnicenko/: Macroeconomic_timeseries.ipynb  readme.md
Danielius_Zarkich/: README.md  holiday_checks.py  holiday_viz.py  holiday_world_comparison.ipynb  lane_insights.py  logistics_data.py  logistics_story_charts.ipynb  requirements.txt  streamlit_app.py
Dominykas_Baronas/: README.md  analysis.py  app.py  charts.py  config.py  data.py  requirements.txt  ui.py
Donatas_Slipiko/: aruodas_data_scraper.py  setup_scraper.py
Gabriele_Bradunaite/: README.md  analysis.html  analysis.ipynb  build_website.py  (+1 more)
Karolis_Zivulskas/: .env.example  .gitignore  Makefile  README.md  Video_URL.txt  docker-compose.yml  pyproject.toml
Karolis_Zivulskas/infra/grafana/dashboards/: repops_content.json  repops_overview.json
Karolis_Zivulskas/infra/grafana/provisioning/datasources/: datasources.yaml
Karolis_Zivulskas/infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
Karolis_Zivulskas/repops/: settings.py
Karolis_Zivulskas/repops/analyzer/: profile_scorer.py  tasks.py
Karolis_Zivulskas/repops/api/: main.py
Karolis_Zivulskas/repops/api/routers/: admin.py
Karolis_Zivulskas/repops/api/templates/admin/: base.html  flagged.html  keywords.html  targets.html
Karolis_Zivulskas/repops/collector/: apify_scraper.py  tasks.py
Karolis_Zivulskas/repops/observability/: logging.py  metrics.py
Karolis_Zivulskas/repops/workers/: app.py  schedules.py  tasks.py
Martynas_Gaizutis/University_Project_CLEAN/: Generative_reader.py  Retriever_module.py  Start_IO_Universal_Retriever.command  index_documents.py  launch_rag.command  pyproject.toml  rag_pipeline.py  settings_manager.py  setup_rag_embed.py  ui_module.py  validation_agent.py
Martynas_Gaizutis/University_Project_CLEAN/DATA/DATA_CSV/: data.csv.css
Martynas_Gaizutis/University_Project_CLEAN/DATA/DATA_EXCEL/: GravityX_Use_For_Funds (2).xlsx
Martynas_Gaizutis/University_Project_CLEAN/DATA/DATA_TXT/: Sample1.txt.txt
Martynas_Gaizutis/University_Project_CLEAN/docs/: DEVELOPER_DOCUMENTATION.md
Martynas_Gaizutis/University_Project_CLEAN/scripts/: launch_ui.sh
Martynas_Gaizutis/University_Project_CLEAN/src/rag3/: __init__.py  __main__.py  cli.py  compat.py  config.py  document_store.py  embedding.py  generation.py  indexing.py  pipeline.py  retrieval.py  ui.py  validation.py
Martynas_Gaizutis/University_Project_CLEAN/tests/: test_config.py
(+24 files in other folders)
