[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repops"
version = "0.1.0"
description = "Reputation Operations — social media disinformation & hate speech monitoring platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Collection
    "httpx>=0.27",

    # NLP / Analysis
    "pyahocorasick>=2.0",

    # Task queue
    "celery[redis]>=5.4",

    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",

    # API
    "jinja2>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",

    # Observability
    "structlog>=24.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
repops-api    = "repops.api.main:run"
repops-worker = "repops.workers.app:run"

[tool.hatch.build.targets.wheel]
packages = ["repops"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["repops"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = true

